# sz3-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs
sz3-sys/: Cargo.toml  README.md  build.rs  wrapper.hpp
sz3-sys/SZ3/: version.hpp
sz3-sys/SZ3/api/: sz.hpp
sz3-sys/SZ3/api/impl/: SZImpl.hpp  SZImplOMP.hpp  SZLorenzoReg.hpp
sz3-sys/SZ3/compressor/: SZGeneralCompressor.hpp  SZInterpolationCompressor.hpp
sz3-sys/SZ3/compressor/deprecated/: SZBlockInterpolationCompressor.hpp
sz3-sys/SZ3/encoder/: HuffmanEncoder.hpp
sz3-sys/SZ3/frontend/: SZFastFrontend.hpp
sz3-sys/SZ3/predictor/: ComposedPredictor.hpp  PolyRegressionPredictor.hpp  RegressionPredictor.hpp
sz3-sys/SZ3/quantizer/: IntegerQuantizer.hpp
sz3-sys/src/: lib.rs
