[package]
name = "sz3"
version = "0.4.0+SZ3-3.3.1"
edition = "2021"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@gmail.com>"]
description = "High level bindings to the SZ3 lossy floating point compressor."
repository = "https://github.com/apertus-open-source-cinema/sz3-rs/"
license = "MIT OR Apache-2.0"
keywords = ["compress"]
categories = ["compression"]
readme = "README.md"
exclude = ["test_data/*"]


[features]
openmp = ["sz3-sys/openmp"]

[dependencies]
sz3-sys = { path = "sz3-sys", version = "0.4.0", default-features = false }
thiserror = { version = "2.0.0", default-features = false }

[dev-dependencies]
bytemuck = { version = "1.16.0", default-features = false }
align-data = { version = "0.1.0", default-features = false }
paste = { version = "1.0.15", default-features = false }

[profile.release]
lto = "thin"
