[package]
name = "sz3-sys"
version = "0.4.0+SZ3-3.3.2"
edition = "2021"
license = "GPL-3.0-only"
authors = [
    "Robin Ole Heinemann <robin.ole.heinemann@gmail.com>",
    "Juniper Tyree <juniper.tyree@helsinki.fi>",
]
description = "Low level bindigs to SZ3."
repository = "https://github.com/apertus-open-source-cinema/sz3-rs/"
keywords = ["compress"]
categories = ["compression"]
readme = "README.md"

[features]
openmp = ["dep:openmp-sys"]

[dependencies]
openmp-sys = { version = "1.3.0", default-features = false, optional = true }
zstd-sys = { version = "2.0.16", default-features = false }

[build-dependencies]
bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }
cc = { version = "1.2.47", default-features = false }
cmake = { version = "0.1.54", default-features = false }
